--- a/app/Views/categories/modifycategory.twig
+++ b/app/Views/categories/modifycategory.twig
@@ -27,15 +27,21 @@
                 </div>
                 <div class="panel-body">
                     <form action="{{ path_for('categories/update', {id: input.codigoCategoria}) }}" method="post">
-                        <div class="form-group has-feedback has-clear">
+                        <div class="form-group has-feedback has-clear {% if failedInputs.codigoCategoria %}has-error{% endif %}">
                             <label for="codigoCategoria">Código</label>
                             <input type="text" name="codigoCategoria" value="{{ input.codigoCategoria }}" class="form-control" id="codigoCategoria" maxlength="2">
                             <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoCategoria %}hidden{% endif %}"></span>
+                            {% if failedInputs.codigoCategoria %}
+                                <span class="help-block">Escribe un código para esta categoría, de exáctamente dos caracteres.</span>
+                            {% endif %}
                         </div>
-                        <div class="form-group has-feedback has-clear">
+                        <div class="form-group has-feedback has-clear {% if failedInputs.nombreCategoria %}has-error{% endif %}">
                             <label for="nombreCategoria">Nombre</label>
                             <input type="text" name="nombreCategoria" value="{{ input.nombreCategoria }}" class="form-control" id="nombreCategoria" maxlength="30">
                             <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreCategoria %}hidden{% endif %}"></span>
+                            {% if failedInputs.nombreCategoria %}
+                                <span class="help-block">Escribe un nombre para la categoría de entre 1 a 20 caracteres.</span>
+                            {% endif %}
                         </div>
                         <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Modificar Categoría</button>
                     </form>
