Agrega validación para formularios de almacenes

--- a/app/Views/warehouses/updatewarehouse.twig
+++ b/app/Views/warehouses/updatewarehouse.twig
@@ -21,20 +21,29 @@
                     <div class="panel-heading">Modifica este almacén</div>
                     <div class="panel-body">
                         <form action="{{ path_for('warehouses/update', {'id': almacenID}) }}" method="post">
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.nombreAlmacen %}has-error{% endif %}">
                                 <label for="nombreAlmacen">Nombre del Almacen</label>
                                 <input type="text" name="nombreAlmacen" value="{{ input.nombreAlmacen }}" class="form-control" id="nombreAlmacen">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreAlmacen %}hidden{% endif %}"></span>
+                                {% if failedInputs.nombreAlmacen %}
+                                    <span class="help-block">Debe ser entre 1 y 50 caracteres.</span>
+                                {% endif %}
                             </div>
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.direccion %}has-error{% endif %}">
                                 <label for="direccion">Dirección</label>
                                 <input type="text" name="direccion" value="{{ input.direccion }}" class="form-control" id="direccion">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.direccion %}hidden{% endif %}"></span>
+                                {% if failedInputs.direccion %}
+                                    <span class="help-block">Debe ser entre 1 y 255 caracteres.</span>
+                                {% endif %}
                             </div>
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.telefono %}has-error{% endif %}">
                                 <label for="telefono">Teléfono</label>
                                 <input type="text" name="telefono" value="{{ input.telefono }}" class="form-control" id="telefono">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.telefono %}hidden{% endif %}"></span>
+                                {% if failedInputs.telefono %}
+                                    <span class="help-block">Debe ser entre 1 y 30 caracteres.</span>
+                                {% endif %}
                             </div>
                             <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Modificar Almacén</button>
                         </form>
