--- a/app/Views/warehouses/newwarehouse.twig
+++ b/app/Views/warehouses/newwarehouse.twig
@@ -21,20 +21,29 @@
                     <div class="panel-heading">Introduce un nuevo almacen</div>
                     <div class="panel-body">
                         <form action="{{ path_for('warehouses/createform') }}" method="post">
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.nombreAlmacen %}has-error{% endif %}">
                                 <label for="nombreAlmacen">Nombre del Almacén</label>
                                 <input type="text" name="nombreAlmacen" value="{% if isSaved is same as(false) %}{{ input.nombreAlmacen }}{% endif %}" class="form-control" id="nombreAlmacen">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreAlmacen %}hidden{% endif %}"></span>
+                                {% if failedInputs.nombreAlmacen %}
+                                    <span class="help-block">Debe ser entre 1 y 50 caracteres.</span>
+                                {% endif %}
                             </div>
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.direccion %}has-error{% endif %}">
                                 <label for="direccion">Dirección</label>
                                 <input type="text" name="direccion" value="{% if isSaved is same as (false) %}{{ input.direccion }}{% endif %}" class="form-control" id="direccion">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.direccion %}hidden{% endif %}"></span>
+                                {% if failedInputs.direccion %}
+                                    <span class="help-block">Debe ser entre 1 y 255 caracteres.</span>
+                                {% endif %}
                             </div>
-                            <div class="form-group has-feedback has-clear">
+                            <div class="form-group has-feedback has-clear {% if failedInputs.telefono %}has-error{% endif %}">
                                 <label for="telefono">Teléfono</label>
                                 <input type="text" name="telefono" value="{% if isSaved is same as (false) %}{{ input.telefono }}{% endif %}" class="form-control" id="telefono">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.telefono %}hidden{% endif %}"></span>
+                                {% if failedInputs.telefono %}
+                                    <span class="help-block">Debe ser entre 1 y 30 caracteres.</span>
+                                {% endif %}
                             </div>
                             <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-plus-sign"></span> Crear Almacen</button>
                         </form>
