--- a/app/Views/empresas/newempresa.twig
+++ b/app/Views/empresas/newempresa.twig
@@ -23,44 +23,44 @@
                         <form action="{{ path_for('empresas/createform') }}" method="post">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.nombreComercial %}has-error{% endif %}">
                                         <label for="nombreComercial">Nombre Comercial</label>
                                         <input type="text" name="nombreComercial" value="{% if isSaved is same as(false) %}{{ input.nombreComercial }}{% endif %}" class="form-control" id="nombreComercial">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreComercial %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.razonSocial %}has-error{% endif %}">
                                         <label for="razonSocial">Razón Social</label>
                                         <input type="text" name="razonSocial" value="{% if isSaved is same as(false) %}{{ input.razonSocial }}{% endif %}" class="form-control" id="razonSocial">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.razonSocial %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.giro %}has-error{% endif %}">
                                         <label for="giro">Giro</label>
                                         <input type="text" name="giro" value="{% if isSaved is same as(false) %}{{ input.giro }}{% endif %}" class="form-control" id="giro">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.giro %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.registro %}has-error{% endif %}">
                                         <label for="registro">Número de Registro de Contribuyente</label>
                                         <input type="text" name="registro" value="{% if isSaved is same as(false) %}{{ input.registro }}{% endif %}" class="form-control" id="registro">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.registro %}hidden{% endif %}"></span>
                                     </div>
                                 </div>
                                 <div class="col-sm-6">
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.nit %}has-error{% endif %}">
                                         <label for="nit">Número NIT</label>
                                         <input type="text" name="nit" value="{% if isSaved is same as(false) %}{{ input.nit }}{% endif %}" class="form-control" id="nit">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nit %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.direccion %}has-error{% endif %}">
                                         <label for="direccion">Dirección</label>
                                         <input type="text" name="direccion" value="{% if isSaved is same as (false) %}{{ input.direccion }}{% endif %}" class="form-control" id="direccion">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.direccion %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.telefono %}has-error{% endif %}">
                                         <label for="telefono">Teléfono</label>
                                         <input type="text" name="telefono" value="{% if isSaved is same as (false) %}{{ input.telefono }}{% endif %}" class="form-control" id="telefono">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.telefono %}hidden{% endif %}"></span>
                                     </div>
-                                    <div class="form-group has-feedback has-clear">
+                                    <div class="form-group has-feedback has-clear {% if failedInputs.email %}has-error{% endif %}">
                                         <label for="email">Correo Electrónico</label>
                                         <input type="text" name="email" value="{% if isSaved is same as(false) %}{{ input.email }}{% endif %}" class="form-control" id="email">
                                         <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.email %}hidden{% endif %}"></span>
