--- a/app/Views/clients/modificarcliente.twig
+++ b/app/Views/clients/modificarcliente.twig
@@ -20,10 +20,12 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading clearfix">
                         <h3 class="panel-title pull-left">Modifica los datos de contacto de este cliente</h3>
+                        {% if is_admin %}
                         <button type="button" class="btn btn-xs btn-danger pull-right" data-toggle="modal" data-target="#modal-eliminar-recurso">
                             <span class="glyphicon glyphicon-trash"></span>
                             Eliminar
                         </button>
+                        {% endif %}
                     </div>
                     <div class="panel-body">
                         <form action="{{ path_for('clientes/update', {id: clienteID}) }}" method="post">
@@ -63,7 +65,9 @@
                                     </div>
                                 </div>
                             </div>
+                            {% if is_admin %}
                             <button type="submit" class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Modificar Contacto</button>
+                            {% endif %}
                         </form>
                     </div>
                 </div>
