--- a/app/Views/reports/reports.twig
+++ b/app/Views/reports/reports.twig
@@ -10,6 +10,7 @@
 
     <div class="container-fluid">
         <div class="row">
+            {% if is_admin %}
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -20,6 +21,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
             <div class="col-sm-4">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
