--- a/app/Views/userconfig/userconfig.twig
+++ b/app/Views/userconfig/userconfig.twig
@@ -40,6 +40,8 @@
                     </div>
                 </div>
             </div>
+            {# INICIA SECCIÓN SOLO ADMIN #}
+            {% if is_admin %}
             {# AJUSTAR IVA #}
             <div class="col-sm-4">
                 <div class="panel panel-primary">
@@ -123,26 +125,27 @@
                 </div>
             </div>
             {# CREAR USUARIO NUEVO #}
-            <div class="col-sm-4">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h2 class="panel-title">Crea usuario nuevo</h2>
-                    </div>
-                    <div class="panel-body">
-                        <form action="{{ path_for('login/nuevo') }}" method="post">
-                            <div class="form-group">
-                                <label for="username">Usuario</label>
-                                <input type="text" id="username" class="form-control" name="username" maxlength="50" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Contraseña</label>
-                                <input type="text" id="password" class="form-control" name="password" maxlength="500" required>
-                            </div>
-                            <button class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Crear Usuario</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+            {#<div class="col-sm-4">#}
+                {#<div class="panel panel-primary">#}
+                    {#<div class="panel-heading">#}
+                        {#<h2 class="panel-title">Crea usuario nuevo</h2>#}
+                    {#</div>#}
+                    {#<div class="panel-body">#}
+                        {#<form action="{{ path_for('login/nuevo') }}" method="post">#}
+                            {#<div class="form-group">#}
+                                {#<label for="username">Usuario</label>#}
+                                {#<input type="text" id="username" class="form-control" name="username" maxlength="50" required>#}
+                            {#</div>#}
+                            {#<div class="form-group">#}
+                                {#<label for="password">Contraseña</label>#}
+                                {#<input type="text" id="password" class="form-control" name="password" maxlength="500" required>#}
+                            {#</div>#}
+                            {#<button class="btn btn-block btn-info"><span class="glyphicon glyphicon-edit"></span> Crear Usuario</button>#}
+                        {#</form>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
+            {% endif %}
         </div>
     </div>
 {% endblock %}
