--- a/app/Views/tirajes/modificartiraje.twig
+++ b/app/Views/tirajes/modificartiraje.twig
@@ -18,7 +18,15 @@
             <div class="alert alert-danger"><span class="glyphicon glyphicon-remove-sign"></span> No se pudo modificar el tiraje.</div>
             {% endif %}
             <div class="panel panel-primary">
-                <div class="panel-heading">Modifica este tiraje</div>
+                <div class="panel-heading clearfix">
+                    <h2 class="panel-title pull-left">Modifica este tiraje</h2>
+                    {% if is_admin %}
+                        <button type="button" class="btn btn-xs btn-danger pull-right" data-toggle="modal" data-target="#modal-eliminar-recurso">
+                            <span class="glyphicon glyphicon-trash"></span>
+                            Eliminar
+                        </button>
+                    {% endif %}
+                </div>
                 <div class="panel-body">
                     <form action="{{ path_for('tirajes/update', {id: idTiraje}) }}" method="post">
                         <div class="form-group has-feedback has-clear">
@@ -41,4 +49,6 @@
         </div>
     </div>
 </div>
+
+{% include '/tirajes/eliminartiraje.twig' %}
 {% endblock %}
