Cambia el título del botón de imprimir cotización para hacerlo más genérico

--- a/app/Views/invoices/nuevafactura.twig
+++ b/app/Views/invoices/nuevafactura.twig
@@ -161,9 +161,9 @@
                                             <span class="glyphicon glyphicon-floppy-save"></span>
                                             Guardar Factura
                                         </button>
-                                        <button type="button" id="btnImprimirCotizacion" class="btn btn-block btn-info hidden cotizacion-show">
+                                        <button type="button" id="btnImprimirCotizacion" class="btn btn-block btn-info hidden readonly-show cotizacion-show">
                                             <span class="glyphicon glyphicon-print"></span>
-                                            Imprimir cotización
+                                            Imprimir
                                         </button>
                                     </div>
                                 </div>
