Cambia vistas para mostrar un campo input para buscar por marcas

--- a/app/Views/invoices/facturabusquedaproducto.twig
+++ b/app/Views/invoices/facturabusquedaproducto.twig
@@ -18,14 +18,15 @@
                     {% endfor %}
                 </select>
             </div>
-            <div class="form-group">
+            <div class="form-group has-feedback has-clear">
                 <label for="marcaProducto">Marca</label>
-                <select class="form-control" name="marcaProducto" id="marcaProducto">
-                    <option value="">Todas</option>
+                <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}" list="listaMarcas" maxlength="500">
+                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback hidden"></span>
+                <datalist id="listaMarcas">
                     {% for brand in brands %}
-                        <option value="{{ brand.MarcaID }}">{{ brand.Nombre }}</option>
+                        <option>{{ brand.Nombre }}</option>
                     {% endfor %}
-                </select>
+                </datalist>
             </div>
             <div class="form-group has-feedback has-clear">
                 <label for="nombreProducto">Nombre</label>
