--- a/app/Views/products/products.twig
+++ b/app/Views/products/products.twig
@@ -21,14 +21,15 @@
                                 <input id="codigoProducto" class="form-control" type="text" name="codigoProducto" placeholder="Código del producto" value="{{ input.codigoProducto }}">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group has-feedback has-clear">
                                 <label for="categoriaProducto">Categoría</label>
-                                <select class="form-control" name="categoriaProducto" id="categoriaProducto">
-                                    <option value="">Todas</option>
+                                <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}" list="listaCategorias" maxlength="100">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.categoriaProducto %}hidden{% endif %}"></span>
+                                <datalist id="listaCategorias">
                                     {% for category in categories %}
-                                        <option value="{{ category.CategoriaProductoID }}" {% if input.categoriaProducto == category.CategoriaProductoID %}selected{% endif %}>{{ category.Nombre }}</option>
+                                        <option>{{ category.Nombre }}</option>
                                     {% endfor %}
-                                </select>
+                                </datalist>
                             </div>
                             <div class="form-group has-feedback has-clear">
                                 <label for="marcaProducto">Marca</label>
