--- a/app/Views/ingresos/ingresos.twig
+++ b/app/Views/ingresos/ingresos.twig
@@ -22,6 +22,31 @@
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.codigoProducto %}hidden{% endif %}"></span>
                             </div>
                             <div class="form-group has-feedback has-clear">
+                                <label for="categoriaProducto">Categoría</label>
+                                <input id="categoriaProducto" class="form-control" type="text" name="categoriaProducto" placeholder="Categoría del producto" value="{{ input.categoriaProducto }}" list="listaCategorias" maxlength="100">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.categoriaProducto %}hidden{% endif %}"></span>
+                                <datalist id="listaCategorias">
+                                    {% for category in categories %}
+                                        <option>{{ category.Nombre }}</option>
+                                    {% endfor %}
+                                </datalist>
+                            </div>
+                            <div class="form-group has-feedback has-clear">
+                                <label for="marcaProducto">Marca</label>
+                                <input id="marcaProducto" class="form-control" type="text" name="marcaProducto" placeholder="Marca del producto" value="{{ input.marcaProducto }}" list="listaMarcas" maxlength="500">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.marcaProducto %}hidden{% endif %}"></span>
+                                <datalist id="listaMarcas">
+                                    {% for brand in brands %}
+                                        <option>{{ brand.Nombre }}</option>
+                                    {% endfor %}
+                                </datalist>
+                            </div>
+                            <div class="form-group has-feedback has-clear">
+                                <label for="nombreProducto">Nombre del Producto</label>
+                                <input id="nombreProducto" class="form-control" type="text" name="nombreProducto" placeholder="Nombre del producto" value="{{ input.nombreProducto }}">
+                                <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreProducto %}hidden{% endif %}"></span>
+                            </div>
+                            <div class="form-group has-feedback has-clear">
                                 <label for="nombreProveedor">Nombre del Proveedor</label>
                                 <input id="nombreProveedor" class="form-control" type="text" name="nombreProveedor" placeholder="Nombre de el proveedor" value="{{ input.nombreProveedor }}">
                                 <span class="form-control-clear glyphicon glyphicon-remove form-control-feedback {% if not input.nombreProveedor %}hidden{% endif %}"></span>
@@ -58,10 +83,12 @@
                         <h2 class="panel-title">{{ pagination.totalItems }} Resultados</h2>
                     </div>
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-striped">
                             <thead>
                             <tr>
-                                <th>Producto</th>
+                                <th>Codigo</th>
+                                <th>Categoría</th>
+                                <th>[Marca] Producto</th>
                                 <th>Proveedor</th>
                                 <th>Cantidad</th>
                                 <th>Precio Unitario</th>
@@ -72,8 +99,10 @@
 
                             <tbody>
                             {% for ingreso in ingresos %}
-                            <tr class="anchorize" data-href="{{ path_for('ingresos') }}/id/{{ ingreso.DetalleIngresosID }}">
+                            <tr>
                                 <td>{{ ingreso.CodigoProducto }}</td>
+                                <td>{{ ingreso.NombreCategoria }}</td>
+                                <td>[{{ ingreso.NombreMarca }}] {{ ingreso.Descripcion }}</td>
                                 <td>{{ ingreso.Proveedor }}</td>
                                 <td>{{ ingreso.Cantidad }}</td>
                                 <td>{{ ingreso.PrecioUnitario }}</td>
