--- a/app/Views/products/ingresarproducto.twig
+++ b/app/Views/products/ingresarproducto.twig
@@ -34,7 +34,7 @@
                 {% endif %}
             </div>
             <div class="form-group {% if failedInputs.valorPrecioUnitario %}has-error{% endif %}">
-                <label for="valorPrecioUnitario">Costo Unitario</label>
+                <label for="valorPrecioUnitario">Costo Unitario (INGRESAR SIN IVA)</label>
                 <div class="input-group">
                     <span class="input-group-addon">
                         <span class="glyphicon glyphicon-usd"></span>
